--- a/src/CheeseMVC/Views/Cheese/Remove.cshtml
+++ b/src/CheeseMVC/Views/Cheese/Remove.cshtml
@@ -1,5 +1,12 @@
 ﻿<h1>@ViewBag.title</h1>
 
+@if(ViewBag.cheeses.Count == 0)
+{
+    <br />
+    <p>No cheeses to remove!</p>
+    <br />
+}
+else { 
 <form method="post">
 
     @foreach (var cheese in ViewBag.cheeses)
@@ -11,3 +18,4 @@
 
     <input type="submit" value="Remove Selected Cheese(s)" />
 </form>
+}
